--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "trivia-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hellenfc.github.io/trivia-react",
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
@@ -16,6 +17,7 @@
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
@@ -25,6 +27,8 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
